dataset1235/2025-2/610742602/users/14016319/executions/677928262_4233865845.log
== SUBMISSION (2025-08-26 20:38:35)
-- CODE: 
C = float(input("Insira a temperatura:"))

TempF = (TempC * 9)/5 + 32
print(TempF)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:38:42)
-- CODE: 
C = float(input("Insira a temperatura:"))

TempF = (C * 9)/5 + 32
print(TempF)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira a temperatura:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira a temperatura:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira a temperatura:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira a temperatura:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira a temperatura:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira a temperatura:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:38:34)
-- CODE: 
C = float(input("Insira a temperatura:"))

TempF = (TempC * 9)/5 + 32
print(TempF)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = (TempC * 9)/5 + 32
             ^^^^^
NameError: name 'TempC' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:37:56)
-- CODE: 
C = float(input("Insira a temperatura:"))

TempF = TempC * 9/5 +32

print(TempF)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:38:43)
-- CODE: 
C = float(input("Insira a temperatura:"))

TempF = (C * 9)/5 + 32
print(TempF)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira a temperatura:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira a temperatura:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira a temperatura:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira a temperatura:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira a temperatura:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira a temperatura:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:37:39)
-- CODE: 
C = float(input("Insira a temperatura:"))

TempF = TempC * 9/5 +32

print(round(TempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TempF = TempC * 9/5 +32
            ^^^^^
NameError: name 'TempC' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
